Fixed domain in text option, add center align in image fix #1

--- a/sections/selettore-tabs/style.less
+++ b/sections/selettore-tabs/style.less
@@ -17,6 +17,9 @@
 			margin-top: 10%;
 			width: 100%;
 		}
+		.media{
+			text-align: center;
+		}
 
 	}
 
